--- a/Templete 02/style.css
+++ b/Templete 02/style.css
@@ -111,3 +111,181 @@ nav ul li a{
     z-index: 2;
     cursor: pointer;
 }
+
+/* ==================== About ==================== */
+
+.about, .offer{
+    padding: 100px 0px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.about-left-col{
+    flex-basis: 50%;
+}
+.about-left-col img{
+    width: 100%;
+}
+
+.about-right-col{
+    flex-basis: 50%;
+    text-align: right;
+}
+.about-text{
+    max-width: 500px;
+    margin-right: 100px;
+    display: inline-block;
+}
+
+.about-text h2{
+    margin: 50px 0 10px;
+    font-size: 28px;
+    font-style: italic;
+}
+
+.about-text h3{
+   color: #f67c92;
+    font-size: 28px;
+    font-style: italic;
+}
+
+
+/* ================= Feature ============= */
+
+#feature{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.feature-row{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.feature-col{
+    flex-basis: 25%;
+    text-align: center;
+}
+
+.feature-col img{
+    width: 100px;
+
+}
+.feature-col h2{
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.feature-btn{
+    margin: 90px auto 0;
+    display: flex;
+    justify-content: center;
+}
+
+.feature-btn .line{
+    text-align: center;
+    display: inline-block;
+    margin-right: 25px;
+}
+
+/* ============= Courses ================= */
+#courses{
+    padding: 100px 0;
+}
+.courses-row{
+display: flex;
+align-items: center;
+flex-wrap: wrap;
+}
+
+.course-right-col{
+    flex-basis: 50%;
+}
+.course-right-col img{
+    width: 100%;
+}
+.course-left-col{
+    flex-basis: 50%;
+}
+.course-text{
+    max-width: 350px;
+}
+
+.course-text button{
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+
+
+.offer button{
+    margin: 30px 0;
+}
+
+
+
+/* ========= contact ================ */
+
+.contact-row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.contact-left-col, .contact-right-col{
+    flex-basis: 50%;
+}
+
+.contact-right-col img{
+    width: 100%;
+}
+
+
+form{
+    max-width: 350px;
+    margin: 30px 0;
+}
+
+form input{
+    width: 100%;
+    padding: 12px 10px;
+    outline: none;
+    box-shadow: none;
+    box-sizing: border-box;
+    border: 2px solid #fab3c4;
+}
+
+.btn-box{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btn-box button{
+    flex-basis: 48%;
+    padding: 18px 0;
+}
+
+.footer{
+    padding: 50px 0 30px;
+}
+hr{
+    width: 100%;
+    border: 0;
+    border-top: 1px solid #f67c92;
+}
+
+.footer-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-left-col{
+    flex-basis: 50%;
+}
+.footer-right-col{
+    flex-basis: 50%
+}
